# finalproject_Evseenkova_Marina_M25-555

./: Makefile  README.md  config.json  main.py  mevseenkova.cast  portfolio.json  portfolios.json  pyproject.toml  users.json
data/: exchange_rates.json  portfolios.json  portfolios.json.backup  rates.json  rates_old.json  users.json  users.json.backup
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/data/: rates.json
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
