[project]
name = "finalproject-evseenkova-marina-m25-555"
version = "0.1.0"
description = "Итоговый проект. Платформа для отслеживания и симуляции торговли валютами."
authors = [
    {name = "mevseenkova",email = "m.samartseva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.valutatrade]
data_dir = "data"
rates_ttl_seconds = 300
base_currency = "USD"
log_level = "INFO"
log_file = "logs/app.log"

[tool.poetry]

packages = [
    { include = "valutatrade_hub", from = "." }
]

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 
[dependency-groups]
dev = [
    "ruff (>=0.14.4,<0.15.0)"
]